--- a/index.html
+++ b/index.html
@@ -3,11 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Basic HTML Page</title>
+    <title>Moving Gradient Background</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <h1>Welcome to My Basic HTML Page</h1>
-    <p>This is a simple paragraph for demonstration.</p>
-    <a href="https://example.com" target="_blank">Visit Example</a>
+    <header>
+        <h1>Andy Yu</h1>
+    </header>
+    <div class="sticky-bar"></div>
+    <main>
+        <section>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <h3>Meepo V3S (Skateboard)</h3>
+                    <p>Description of event 1.</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>Arts and Crafts</h3>
+                    <p>Description of event 2.</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>Sailing</h3>
+                    <p>Description of event 3.</p>
+                </div>
+                <div class="timeline-item">
+                    <h3>Tactile Sensing</h3>
+                    <p>Description of event 4.</p>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="script.js"></script>
 </body>
 </html>
