Set body background

--- a/index.html
+++ b/index.html
@@ -11,28 +11,26 @@
     <header>
         <h1>Andy Yu</h1>
     </header>
-    <div class="sticky-bar"></div>
+    <hr class="sticky-line">
     <main>
-        <section>
-            <div class="timeline">
-                <div class="timeline-item">
-                    <h3>Meepo V3S (Skateboard)</h3>
-                    <p>Description of event 1.</p>
-                </div>
-                <div class="timeline-item">
-                    <h3>Arts and Crafts</h3>
-                    <p>Description of event 2.</p>
-                </div>
-                <div class="timeline-item">
-                    <h3>Sailing</h3>
-                    <p>Description of event 3.</p>
-                </div>
-                <div class="timeline-item">
-                    <h3>Tactile Sensing</h3>
-                    <p>Description of event 4.</p>
-                </div>
+        <div class="timeline">
+            <div class="timeline-item">
+                <h3>Meepo V3S (Skateboard)</h3>
+                <p>Description of event 1.</p>
             </div>
-        </section>
+            <div class="timeline-item">
+                <h3>Arts and Crafts</h3>
+                <p>Description of event 2.</p>
+            </div>
+            <div class="timeline-item">
+                <h3>Sailing</h3>
+                <p>Description of event 3.</p>
+            </div>
+            <div class="timeline-item">
+                <h3>Tactile Sensing</h3>
+                <p>Description of event 4.</p>
+            </div>
+        </div>
     </main>
     <script src="script.js"></script>
 </body>
