--- a/index.html
+++ b/index.html
@@ -1,37 +1,34 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html>
+  <head>
     <title>Andy Yu</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body>
+  <body class="container">
     <header>
-        <h1>Andy Yu</h1>
+      <h1>Andy Yu</h1>
     </header>
     <hr class="sticky-line">
     <main>
-        <div class="timeline">
-            <div class="timeline-item">
-                <h3>Meepo V3S (Skateboard)</h3>
-                <p>Description of event 1.</p>
-            </div>
-            <div class="timeline-item">
-                <h3>Arts and Crafts</h3>
-                <p>Description of event 2.</p>
-            </div>
-            <div class="timeline-item">
-                <h3>Sailing</h3>
-                <p>Description of event 3.</p>
-            </div>
-            <div class="timeline-item">
-                <h3>Tactile Sensing</h3>
-                <p>Description of event 4.</p>
-            </div>
-        </div>
+      <div class="item">
+          <h3>Meepo V3S (Skateboard)</h3>
+          <p>Description of event.</p>
+      </div>
+      <div class="item">
+          <h3>Arts and Crafts</h3>
+          <p>Description of event.</p>
+      </div>
+      <div class="item">
+          <h3>Sailing</h3>
+          <p>Description of event.</p>
+      </div>
+      <div class="item">
+          <h3>Tactile Sensing</h3>
+          <p>Description of event.</p>
+      </div>
     </main>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
