--- a/index.html
+++ b/index.html
@@ -4,30 +4,31 @@
     <title>Andy Yu</title>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="img/andy-snoopy.png" type="image/png">
   </head>
 
-  <body class="container">
+  <body>
     <header>
       <h1>Andy Yu</h1>
     </header>
     <hr class="sticky-line">
     <main>
       <div class="item">
-          <h3>Meepo V3S (Skateboard)</h3>
+        <h3>Tactile Sensing</h3>
+        <p>Description of event.</p>
+      </div>
+      <div class="item">
+        <h3>Sailing</h3>
+        <p>Description of event.</p>
+      </div>
+      <div class="item">
+          <h3>Meepo V3S</h3>
           <p>Description of event.</p>
       </div>
       <div class="item">
-          <h3>Arts and Crafts</h3>
-          <p>Description of event.</p>
-      </div>
-      <div class="item">
-          <h3>Sailing</h3>
-          <p>Description of event.</p>
-      </div>
-      <div class="item">
-          <h3>Tactile Sensing</h3>
-          <p>Description of event.</p>
-      </div>
+        <h3>Arts and Crafts</h3>
+        <p>Description of event.</p>
+    </div>
     </main>
     <script src="script.js"></script>
   </body>
