--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
     <main>
       <div class="item">
         <h3>Tactile Sensing</h3>
-        <p>Description of event.</p>
+        <p>Undergraduate Research</p>
       </div>
       <div class="item">
         <h3>Sailing</h3>
-        <p>Description of event.</p>
+        <p>Optimist, 420, FJ</p>
       </div>
       <div class="item">
           <h3>Meepo V3S</h3>
-          <p>Description of event.</p>
+          <p>Electric Skateboard</p>
       </div>
       <div class="item">
         <h3>Arts and Crafts</h3>
-        <p>Description of event.</p>
+        <p>Depression prevention</p>
     </div>
     </main>
     <script src="script.js"></script>
