Add button behavior

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     </header>
     <hr class="sticky-line">
     <main>
-      <div class="item">
+      <button class="item" onclick="location.href='pages/tactile-sensing.html';">
         <h3>Tactile Sensing</h3>
         <p>Undergraduate Research</p>
-      </div>
-      <div class="item">
+      </button>
+      <button class="item" onclick="location.href='pages/sailing.html';">
         <h3>Sailing</h3>
         <p>Optimist, 420, FJ</p>
-      </div>
-      <div class="item">
-          <h3>Meepo V3S</h3>
-          <p>Electric Skateboard</p>
-      </div>
-      <div class="item">
+      </button>
+      <button class="item" onclick="location.href='pages/arts-and-crafts.html';">
         <h3>Arts and Crafts</h3>
         <p>Depression prevention</p>
-    </div>
+      </button>
+      <button class="item" onclick="window.open('https://www.github.com/eleguap', '_blank');">
+        <h3>Github</h3>
+        <p>'eleguap' is just a username</p>
+      </button>
     </main>
     <script src="script.js"></script>
   </body>
