Add MASLAB and Sailing pages

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
         <h3>Tactile Sensing</h3>
         <p>Undergraduate Research</p>
       </button>
+      <button class="item" onclick="window.open('https://maslab-5.github.io', '_blank')">
+        <h3>MASLAB</h3>
+        <p>MIT Robotics Competition</p>
+      </button>
       <button class="item" onclick="location.href='pages/sailing.html';">
         <h3>Sailing</h3>
         <p>Optimist, 420, FJ</p>
