--- a/pages/sailing.html
+++ b/pages/sailing.html
@@ -2,8 +2,40 @@
 <html>
 <head>
     <title>Sailing</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="page-styles.css" />
+    <link rel="icon" href="../img/andy-snoopy.png" type="image/png">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Sailing</h1>
+    <p>Started in second grade.</p>
+    <hr>
+
+    <div class="image-container">
+        <img src="../img/roll-tack.jpg" alt="Andy roll tacking" width="45%">
+        <img src="../img/rounding.jpg" alt="Andy rounding a mark" width="45%">
+    </div>
+    <hr>
+
+    <h2>Coaches</h2>
+    <h3>MIT</h3>
+    <p>Micheal Kalin ~ Caroline Young</p>
+    <p>Hanna ~ Trevor Long ~ Mike Kanare</p>
+    <div class="spacer"></div>
+
+    <h3>High School (420, FJ)</h3>
+    <p>Tyler Rice ~ Robert Hunter</p>
+    <p>Isaac Clark ~ Johnny Norfleet</p>
+    <div class="spacer"></div>
+
+    <h3>Optimist</h3>
+    <p>Agustin Resano ~ Greer Scholes</p>
+    <hr>
+
+    <h2>Results</h2>
+    <h3>MIT</h3>
+    <h3>High School</h3>
+    <h3>C420s</h3>
+    <h3>Optimist</h3>
 </body>
 </html>
