Finish sailing page

--- a/pages/tactile-sensing.html
+++ b/pages/tactile-sensing.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <title>Tactile Sensing</title>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="page-styles.css" />
+    <link rel="icon" href="../img/andy-snoopy.png" type="image/png">
 </head>
 <body>
     <h1>Hello, World!</h1>
