html of all pages

--- a/pages/arts-and-crafts.html
+++ b/pages/arts-and-crafts.html
@@ -7,6 +7,112 @@
     <link rel="icon" href="../img/andy-snoopy.png" type="image/png">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Arts and Crafts</h1>
+    <p>When I'm feeling cozy.</p>
+    <hr>
+    <div class="image-text">
+        <div class="text">
+            <h2>Name Plate</h2>
+            <h4>Inkscape · Onshape · Laser cut · 3D Printed</h4>
+            <hr>
+            <p>
+                Made for secret santa. To someone who lives in Hawaii.
+            </p>
+        </div>
+        <div class="image-group">
+            <div class="row">
+                <div class="column">
+                    <img src="../img/secretdraft.png" width="100%">
+                </div>
+                <div class="column">
+                    <img src="../img/secretfinal.png" width="100%">
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="image-text">
+        <div class="image-group">
+            <div class="row">
+                <div class="column">
+                    <img src="../img/flowerbase.png">
+                </div>
+                <div class="column">
+                    <img src="../img/wave.png">
+                </div>
+                <div class="column">
+                    <img src="../img/flowers.png">
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <img src="../img/rpmtree.png">
+                </div>
+                <div class="column">
+                    <img src="../img/acrylic.jpeg" width="70%">
+                </div>
+            </div>
+        </div>
+        <div class="text">
+            <h2>Acrylic Things</h2>
+            <h4>Inkscape · Onshape · Laser cut · 3D Printed</h4>
+            <hr>
+            <p>Various acrylic pieces made for myself and secret santa.</p>
+        </div>
+    </div>
+    <hr>
+    <div class="image-text">
+        <div class="text">
+            <h2>Picture Frame</h2>
+            <h4>Onshape · Fusion360 · 3D Printed</h4>
+            <hr>
+            <p>
+                Wanted to frame a picture from my hometown.
+                Had a lot help from Miguel Flores-Acton.
+            </p>
+        </div>
+        <div class="image-group">
+            <div class="row">
+                <div class="column">
+                    <img src="../img/frameback.jpeg">
+                </div>
+                <div class="column">
+                    <img src="../img/framefront.jpeg">
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
+    <div class="image-text">
+        <div class="image-group">
+            <div class="row">
+                <div class="column">
+                    <img src="../img/clarkfleet.png">
+                </div>
+                <div class="column">
+                    <img src="../img/antilles.png">
+                </div>
+            </div>
+            <div class="row">
+                <div class="column">
+                    <img src="../img/styc.png">
+                </div>
+                <div class="column">
+                    <img src="../img/mit.png">
+                </div>
+                <div class="column">
+                    <img src="../img/burgees.jpeg">
+                </div>
+            </div>
+        </div>
+        <div class="text">
+            <h2>Burgee Keychains</h2>
+            <h4>Inkscape · Fusion360 · Laser cut · 3D Printed</h4>
+            <hr>
+            <p>My first project.
+                Key chains of the flags of every sailing team I’ve sailed for.
+            </p>
+        </div>
+    </div>
 </body>
 </html>
