--- a/pages/sailing.html
+++ b/pages/sailing.html
@@ -11,9 +11,15 @@
     <p>Started in second grade.</p>
     <hr>
 
-    <div class="image-container">
-        <img src="../img/roll-tack.jpg" alt="Andy roll tacking" width="45%">
-        <img src="../img/rounding.jpg" alt="Andy rounding a mark" width="45%">
+    <div class="image-group">
+        <div class="row">
+            <div class="column">
+                <img src="../img/roll-tack.jpg" alt="Andy roll tacking">
+            </div>
+            <div class="column">
+                <img src="../img/rounding.jpg" alt="Andy rounding a mark">
+            </div>
+        </div>
     </div>
     <hr>
 
@@ -38,7 +44,7 @@
     <div class="spacer"></div>
     <hr>
 
-    <h2>Chronological Results</h2>
+    <h2>Results</h2>
     <h3>MIT</h3>
         <table>
             <!-- Define column widths -->
