--- a/pages/tactile-sensing.html
+++ b/pages/tactile-sensing.html
@@ -7,6 +7,11 @@
     <link rel="icon" href="../img/andy-snoopy.png" type="image/png">
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>Tactile Sensing</h1>
+    <h3>Distributed Robotics Laboratory in MIT CSAIL</h3>
+    <h3>Supervisor: Annan Zhang ~ PI: Daniela Rus</h3>
+    <hr>
+    <p>Zhang, A., Flores-Action, M., <strong>Yu, A.</strong>, Gupta, A., Yao, M., Rus, D. (2024). Fluidically innervated lattices make
+        versatile and durable tactile sensors. Under Review.</p>
 </body>
 </html>
