--- a/pages/tactile-sensing.html
+++ b/pages/tactile-sensing.html
@@ -11,7 +11,8 @@
     <h3>Distributed Robotics Laboratory in MIT CSAIL</h3>
     <h3>Supervisor: Annan Zhang ~ PI: Daniela Rus</h3>
     <hr>
-    <p>Zhang, A., Flores-Action, M., <strong>Yu, A.</strong>, Gupta, A., Yao, M., Rus, D. (2025). Fluidically innervated lattices make
-        versatile and durable tactile sensors. ISER 2025.</p>
+    <p>Fluidically Innervated Lattices Make Versatile and Durable Tactile Sensors.
+        Annan Zhang, Miguel Flores-Acton, <strong>Andy Yu</strong>, Anshul Gupta, Maggie Yao, Daniela Rus.
+        Accepted at <i>2025 International Symposium on Experimental Robotics (ISER).</i></p>
 </body>
 </html>
