Revamp home page

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
 
   <body>
-    <header>
-      <h1>Andy Yu</h1>
+    <header class="typewriter">
+      <span id="text"></span><span id="cursor">_</span>
     </header>
-    <hr class="sticky-line">
+
     <main>
       <button class="item" onclick="location.href='pages/tactile-sensing.html';">
         <h3>Tactile Sensing</h3>
