Revamp all pages

--- a/index.html
+++ b/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Andy Yu</title>
-    <meta charset="UTF-8" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="icon" href="img/andy-snoopy.png" type="image/png">
-  </head>
+<head>
+  <title>Andy Yu</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="img/andy-snoopy.png" type="image/png">
+</head>
 
-  <body>
-    <header class="typewriter">
-      <span id="text"></span><span id="cursor">_</span>
-    </header>
+<body>
+  <header class="typewriter">
+    <span id="text"></span><span id="cursor">_</span>
+  </header>
 
-    <main>
-      <button class="item" onclick="location.href='pages/tactile-sensing.html';">
-        <h3>Tactile Sensing</h3>
-        <p>Undergraduate Research</p>
-      </button>
-      <button class="item" onclick="window.open('https://maslab-5.github.io', '_blank')">
-        <h3>MASLAB</h3>
-        <p>MIT Robotics Competition</p>
-      </button>
-      <button class="item" onclick="location.href='pages/sailing.html';">
-        <h3>Sailing</h3>
-        <p>Optimist, 420, FJ</p>
-      </button>
-      <button class="item" onclick="location.href='pages/arts-and-crafts.html';">
-        <h3>Arts and Crafts</h3>
-        <p>Depression prevention</p>
-      </button>
-      <button class="item" onclick="window.open('https://www.github.com/eleguap', '_blank');">
-        <h3>Github</h3>
-        <p>'eleguap' is just a username</p>
-      </button>
-    </main>
-    <script src="script.js"></script>
-  </body>
+  <main>
+    <button class="item" onclick="window.open('https://rss2025-12.github.io/website', '_blank')">
+      <h3>RSS 2025 (6.4200)</h3>
+      <p>MIT Robotics Class</p>
+    </button>
+    <button class="item" onclick="location.href='pages/tactile-sensing.html';">
+      <h3>Tactile Sensing</h3>
+      <p>Undergraduate Research</p>
+    </button>
+    <button class="item" onclick="window.open('https://maslab-5.github.io', '_blank')">
+      <h3>MASLAB</h3>
+      <p>MIT IAP Robotics Competition</p>
+    </button>
+    <button class="item" onclick="location.href='pages/sailing.html';">
+      <h3>Sailing</h3>
+      <p>Optimist, 420, FJ</p>
+    </button>
+    <button class="item" onclick="location.href='pages/arts-and-crafts.html';">
+      <h3>Arts and Crafts</h3>
+      <p>Depression prevention</p>
+    </button>
+    <button class="item" onclick="window.open('https://www.github.com/eleguap', '_blank');">
+      <h3>Github</h3>
+      <p>'eleguap' is just a username</p>
+    </button>
+  </main>
+  <script src="script.js"></script>
+</body>
 </html>
