--- a/pages/sailing.html
+++ b/pages/sailing.html
@@ -7,45 +7,51 @@
     <link rel="icon" href="../img/andy-snoopy.png" type="image/png">
 </head>
 <body>
-    <h1>Sailing</h1>
-    <p>Started in second grade.</p>
+    <header>
+        <h1>Sailing</h1>
+        <p>Started in second grade.</p>
+    </header>
+
     <hr>
 
-    <div class="image-group">
-        <div class="row">
-            <div class="column">
-                <img src="../img/roll-tack.jpg" alt="Andy roll tacking">
-            </div>
-            <div class="column">
-                <img src="../img/rounding.jpg" alt="Andy rounding a mark">
+    <main>
+        <div class="image-group">
+            <div class="row">
+                <div class="column">
+                    <img src="../img/roll-tack.jpg" alt="Andy roll tacking">
+                </div>
+                <div class="column">
+                    <img src="../img/rounding.jpg" alt="Andy rounding a mark">
+                </div>
             </div>
         </div>
-    </div>
-    <hr>
 
-    <h2>Coaches</h2>
-    <h3>MIT (420, FJ)</h3>
-    <p>Micheal Kalin ~ Caroline Young</p>
-    <p>Hanna ~ Trevor Long ~ Mike Kanare</p>
-    <div class="spacer"></div>
+        <hr>
 
-    <h3>Antilles School (420, FJ)</h3>
-    <p>Tyler Rice ~ Robert Hunter</p>
-    <p>Teddy Nicolosi ~ Sean Seagerblom</p>
-    <div class="spacer"></div>
+        <h2 style="margin: 1.5% 0 0 0;">Coaches</h2>
+        <h3>MIT (420, FJ)</h3>
+        <p>Micheal Kalin ~ Caroline Young</p>
+        <p>Hanna ~ Trevor Long ~ Mike Kanare</p>
+        <div class="spacer"></div>
 
-    <h3>Clarkfleet / C420</h3>
-    <p>Isaac Clark ~ Johnny Norfleet</p>
-    <p>Agustin Resano ~ Rayne Duff</p>
-    <div class="spacer"></div>
+        <h3>Antilles School (420, FJ)</h3>
+        <p>Tyler Rice ~ Robert Hunter</p>
+        <p>Teddy Nicolosi ~ Sean Seagerblom</p>
+        <div class="spacer"></div>
 
-    <h3>St. Thomas Yacht Club (Optimist)</h3>
-    <p>Agustin Resano ~ Greer Scholes</p>
-    <div class="spacer"></div>
-    <hr>
+        <h3>Clarkfleet / C420</h3>
+        <p>Isaac Clark ~ Johnny Norfleet</p>
+        <p>Agustin Resano ~ Rayne Duff</p>
+        <div class="spacer"></div>
 
-    <h2>Results</h2>
-    <h3>MIT</h3>
+        <h3>St. Thomas Yacht Club (Optimist)</h3>
+        <p>Agustin Resano ~ Greer Scholes</p>
+        <div class="spacer"></div>
+
+        <hr>
+
+        <h2 style="margin: 1.5% 0 0 0;">Results</h2>
+        <h3>MIT</h3>
         <table>
             <!-- Define column widths -->
             <colgroup>
@@ -156,7 +162,8 @@
             </tbody>
         </table>
         <div class="spacer"></div>
-    <h3>Antilles School</h3>
+
+        <h3>Antilles School</h3>
         <table>
             <!-- Define column widths -->
             <colgroup>
@@ -254,7 +261,8 @@
 
         </table>
         <div class="spacer"></div>
-    <h3>C420s</h3>
+
+        <h3>C420s</h3>
         <table>
             <!-- Define column widths -->
             <colgroup>
@@ -337,14 +345,15 @@
             </tbody>
         </table>
         <div class="spacer"></div>
-    <h3>Optimist</h3>
+
+        <h3>Optimist</h3>
         <table>
             <!-- Define column widths -->
             <colgroup>
-                <col>
-                <col>
-                <col>
-                <col>
+                <col style="width: 24%;">
+                <col style="width: 20%;">
+                <col style="width: 13%;">
+                <col style="width: 8%;">
             </colgroup>
 
             <!-- Table header -->
@@ -583,6 +592,6 @@
                 </tr>
             </tbody>
         </table>
-
+    </main>
 </body>
 </html>
