--- a/pages/tactile-sensing.html
+++ b/pages/tactile-sensing.html
@@ -6,13 +6,21 @@
     <link rel="stylesheet" href="page-styles.css" />
     <link rel="icon" href="../img/andy-snoopy.png" type="image/png">
 </head>
+
 <body>
-    <h1>Tactile Sensing</h1>
-    <h3>Distributed Robotics Laboratory in MIT CSAIL</h3>
-    <h3>Supervisor: Annan Zhang ~ PI: Daniela Rus</h3>
+    <header>
+        <h1>Tactile Sensing</h1>
+        <h3>Distributed Robotics Laboratory in MIT CSAIL</h3>
+        <h3>Supervisor: Annan Zhang</h3>
+        <h3>PI: Daniela Rus</h3>
+    </header>
     <hr>
-    <p>Fluidically Innervated Lattices Make Versatile and Durable Tactile Sensors.
-        Annan Zhang, Miguel Flores-Acton, <strong>Andy Yu</strong>, Anshul Gupta, Maggie Yao, Daniela Rus.
-        Accepted at <i>2025 International Symposium on Experimental Robotics (ISER).</i></p>
+    <main>
+        <p>
+            Fluidically Innervated Lattices Make Versatile and Durable Tactile Sensors.
+            Annan Zhang, Miguel Flores-Acton, <strong>Andy Yu</strong>, Anshul Gupta, Maggie Yao, Daniela Rus.
+            Accepted at <i>2025 International Symposium on Experimental Robotics (ISER).</i>
+        </p>
+    </main>
 </body>
 </html>
