Added footer buttons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="icon" href="img/andy-snoopy.png" type="image/png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -33,11 +34,16 @@
       <h3>Arts and Crafts</h3>
       <p>Depression prevention</p>
     </button>
-    <button class="item" onclick="window.open('https://www.github.com/eleguap', '_blank');">
-      <h3>Github</h3>
-      <p>'eleguap' is just a username</p>
-    </button>
   </main>
+
+  <footer>
+    <button class="icon-button" onclick="window.open('https://www.github.com/eleguap', '_blank');">
+      <i class="fa-brands fa-github" ></i>
+    </button>
+    <button class="icon-button" onclick="window.open('https://www.linkedin.com/in/andy-yu-7b299b2a6/', '_blank');">
+      <i class="fa-brands fa-linkedin"></i>
+    </button>
+  </footer>
   <script src="script.js"></script>
 </body>
 </html>
