--- a/pages/arts-and-crafts.html
+++ b/pages/arts-and-crafts.html
@@ -86,7 +86,7 @@
             </div>
         </div>
         <hr style="margin: 1% auto;">
-        <div class="image-text">
+        <div class="image-text" style="margin-bottom: 2%;">
             <div class="image-group">
                 <div class="row">
                     <div class="column">
