--- a/pages/sailing.html
+++ b/pages/sailing.html
@@ -347,7 +347,7 @@
         <div class="spacer"></div>
 
         <h3>Optimist</h3>
-        <table>
+        <table style="margin-bottom: 2%;">
             <!-- Define column widths -->
             <colgroup>
                 <col style="width: 24%;">
