--- a/index.html
+++ b/index.html
@@ -40,8 +40,11 @@
     <button class="icon-button" onclick="window.open('https://www.github.com/eleguap', '_blank');">
       <i class="fa-brands fa-github" ></i>
     </button>
-    <button class="icon-button" onclick="window.open('https://www.linkedin.com/in/andy-yu-7b299b2a6/', '_blank');">
+    <button class="icon-button" onclick="window.open('https://www.linkedin.com/in/andyyu132/', '_blank');">
       <i class="fa-brands fa-linkedin"></i>
+    </button>
+    <button class="icon-button" onclick="window.location.href='mailto:andyyu132@gmail.com';">
+      <i class="fa-solid fa-envelope" ></i>
     </button>
   </footer>
   <script src="script.js"></script>
