--- a/pages/sailing.html
+++ b/pages/sailing.html
@@ -5,8 +5,29 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="page-styles.css" />
     <link rel="icon" href="../img/andy-snoopy.png" type="image/png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+    <div class="dropdown">
+        <div class="menu">
+            <a href="../index.html" title="Home">
+                <i class="fa-solid fa-home"></i>
+            </a>
+            <a href="https://github.com/eleguap" target="_blank" title="GitHub">
+                <i class="fa-brands fa-github"></i>
+            </a>
+            <a href="https://linkedin.com/in/andyyu132" target="_blank" title="LinkedIn">
+                <i class="fa-brands fa-linkedin"></i>
+            </a>
+            <a href="mailto:andyyu132@gmail.com" title="Email me">
+                <i class="fa-solid fa-envelope"></i>
+            </a>
+        </div>
+        <div class="arrow">
+            <i class="fa-solid fa-chevron-down"></i>
+        </div>
+    </div>
+
     <header>
         <h1>Sailing</h1>
         <p>Started in second grade.</p>
