--- a/index.html
+++ b/index.html
@@ -9,44 +9,44 @@
 </head>
 
 <body>
-  <header class="typewriter">
-    <span id="text"></span><span id="cursor">_</span>
+  <header>
+    Andy Yu
+    <div class="header-buttons">
+      <button class="icon-button" onclick="window.open('https://www.github.com/eleguap', '_blank');">
+      <i class="fa-brands fa-github" ></i>
+      </button>
+      <button class="icon-button" onclick="window.open('https://www.linkedin.com/in/andyyu132/', '_blank');">
+        <i class="fa-brands fa-linkedin"></i>
+      </button>
+      <button class="icon-button" onclick="window.location.href='mailto:andyyu132@gmail.com';">
+        <i class="fa-solid fa-envelope" ></i>
+      </button>
+    </div>
   </header>
 
   <main>
-    <button class="item" onclick="window.open('https://rss2025-12.github.io/website', '_blank')">
-      <h3>RSS 2025 (6.4200)</h3>
+    <button onclick="window.open('https://rss2025-12.github.io/website', '_blank')">
+      <h3>RSS 2025</h3>
       <p>MIT Robotics Class</p>
     </button>
-    <button class="item" onclick="location.href='pages/tactile-sensing.html';">
+    <button onclick="location.href='pages/tactile-sensing.html';">
       <h3>Tactile Sensing</h3>
       <p>Undergraduate Research</p>
     </button>
-    <button class="item" onclick="window.open('https://maslab-5.github.io', '_blank')">
-      <h3>MASLAB</h3>
+    <button onclick="window.open('https://maslab-5.github.io', '_blank')">
+      <h3>MASLAB 2023</h3>
       <p>MIT IAP Robotics Competition</p>
     </button>
-    <button class="item" onclick="location.href='pages/sailing.html';">
+    <button onclick="location.href='pages/sailing.html';">
       <h3>Sailing</h3>
       <p>Optimist, 420, FJ</p>
     </button>
-    <button class="item" onclick="location.href='pages/arts-and-crafts.html';">
+    <button onclick="location.href='pages/arts-and-crafts.html';">
       <h3>Arts and Crafts</h3>
       <p>Depression prevention</p>
     </button>
   </main>
 
-  <footer>
-    <button class="icon-button" onclick="window.open('https://www.github.com/eleguap', '_blank');">
-      <i class="fa-brands fa-github" ></i>
-    </button>
-    <button class="icon-button" onclick="window.open('https://www.linkedin.com/in/andyyu132/', '_blank');">
-      <i class="fa-brands fa-linkedin"></i>
-    </button>
-    <button class="icon-button" onclick="window.location.href='mailto:andyyu132@gmail.com';">
-      <i class="fa-solid fa-envelope" ></i>
-    </button>
-  </footer>
   <script src="script.js"></script>
 </body>
 </html>
